apps/owasp-juice-shop/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juice-shop
  namespace: owasp-juice-shop
  labels:
    app.kubernetes.io/name: juice-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: juice-shop
  template:
    metadata:
      labels:  
        app.kubernetes.io/name: juice-shop
    spec:
      containers:
        - name: juice-shop
          image: "docker.io/bkimminich/juice-shop:v19.0.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
