apps/owasp-juice-shop/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: juice-shop
  namespace: owasp-juice-shop
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: juice-shop
